tab and style changes

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Atile | Hjem</title>
+    <title>Atile</title>
     <meta charset="UTF-8" />
     <meta name="description" content="Atile nettsider" />
     <link rel="icon" href="./favicon.ico" />
