larger mobile logo

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
   <head>
     <title>Atile</title>
     <meta charset="UTF-8" />
-    <meta name="description" content="Atile nettsider" />
+    <meta name="description" content="Atile-nettside" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta http-equiv="Content-Security-Policy" content="script-src 'none'" />
+    <meta
+      http-equiv="Content-Security-Policy"
+      content="script-src 'none' object-src 'none'"
+    />
     <link rel="icon" href="./favicon.ico" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
@@ -16,7 +19,7 @@
   <body>
     <div class="logo-container">
       <img class="logo-img-laptop" src="./logo-350.webp" alt="logo" />
-      <img class="logo-img-mobile" src="./logo-120.webp" alt="logo" />
+      <img class="logo-img-mobile" src="./logo-200.webp" alt="logo" />
     </div>
     <div class="text-container">
       <p>
