semicolon in CSP and more img testing

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       http-equiv="Content-Security-Policy"
-      content="script-src 'none' object-src 'none'"
+      content="script-src 'none'; object-src 'none'"
     />
     <link rel="icon" href="./favicon.ico" />
     <link
@@ -18,8 +18,7 @@
   </head>
   <body>
     <div class="logo-container">
-      <img class="logo-img-laptop" src="./logo-350.webp" alt="logo" />
-      <img class="logo-img-mobile" src="./logo-200.webp" alt="logo" />
+      <img class="logo-img" src="./logo-800.webp" alt="logo" />
     </div>
     <div class="text-container">
       <p>
