change phone styling

--- a/index.html
+++ b/index.html
@@ -20,15 +20,19 @@
     <div class="logo-container">
       <img class="logo-img" src="./logo-800.webp" alt="logo" />
     </div>
-    <div class="text-container">
+    <div class="text-container-1">
+      <p>Atile er et relativt ungt IT-konsulentselskap basert i Oslo</p>
+    </div>
+    <div class="text-container-2">
       <p>
-        Atile er et relativt ungt IT-konsulentselskap basert i Oslo.
-        <br /><br />
         Vi kan bistå med programvareutvikling for web, API-løsninger og generell
-        bruk av nettsky.
-        <br /><br />
-        Har du spørsmål? Ta gjerne kontakt med oss på
-        <a href="mailto:hei@atile.no">hei@atile.no</a>.
+        bruk av nettsky
+      </p>
+    </div>
+    <div class="text-container-3">
+      <p>
+        Har du spørsmål? Ta gjerne kontakt med
+        <a href="mailto:ola.opheim@atile.no">ola.opheim@atile.no</a>
       </p>
     </div>
   </body>
