add grid for laptop

--- a/index.html
+++ b/index.html
@@ -35,5 +35,6 @@
         <a href="mailto:ola.opheim@atile.no">ola.opheim@atile.no</a>
       </p>
     </div>
+    <div class="text-container-4"></div>
   </body>
 </html>
