add robots.txt and canonical

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       content="script-src 'none'; object-src 'none'"
     />
     <link rel="icon" href="./favicon.ico" />
+    <link rel="canonical" href="https://atile.no" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
       rel="stylesheet"
